--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
 
 
@@ -112,6 +112,12 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="Reg15Black">
+        <item name="android:fontFamily">@font/spartan_regular</item>
+        <item name="android:textSize">15.4sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="Reg14Black50">
         <item name="android:fontFamily">@font/spartan_regular</item>
         <item name="android:textSize">14.4sp</item>
@@ -189,6 +195,13 @@
         <item name="android:fontFamily">@font/spartan_semi_bold</item>
         <item name="android:textSize">17.3sp</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+
+    <style name="SemiBold17Black">
+        <item name="android:fontFamily">@font/spartan_semi_bold</item>
+        <item name="android:textSize">17.3sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="SemiBold9Black">
