--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/aqua_marine"
+        android:background="@color/bright_cyan_two"
         android:text="Login Screen"
         android:padding="23dp"
         style="@style/Bold21White"/>
@@ -57,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:background="@color/aqua_marine"
+        android:background="@color/bright_cyan_two"
         android:text="Login"
         android:paddingHorizontal="30dp"
         android:paddingVertical="20dp"
