--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,66 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
-
-<TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/bright_cyan_two"
-    android:text="Patient Details"
-    android:padding="23dp"
-    style="@style/Bold21White"/>
+    android:layout_height="match_parent"
+    android:background="@color/light_blue"
+    android:orientation="vertical">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="50dp"
-    android:layout_marginBottom="50dp"
-    android:padding="23dp">
-
-    <TextView
-        style="@style/Bold19Black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name" />
-
-    <TextView
-        android:id="@+id/mainFragName"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Reg15Black"
-        android:padding="10dp"
-        android:backgroundTint="@color/grey"/>
+        android:layout_marginBottom="15dp"
+        android:elevation="8dp"
+        app:cardElevation="10dp">
 
-    <TextView
-        style="@style/Bold19Black"
-        android:paddingTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email" />
+        <TextView
+            style="@style/Title25White"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/assistant_extrabold"
+            android:gravity="center"
+            android:paddingHorizontal="23dp"
+            android:paddingVertical="17dp"
+            android:text="שלום ניקול!"
+            android:textSize="30sp"
+            android:shadowColor="@color/gray_black"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2" />
 
-    <TextView
-        android:id="@+id/mainFragEmail"
+
+    </androidx.cardview.widget.CardView>
+
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Reg15Black"
-        android:padding="10dp"
-        android:backgroundTint="@color/grey"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:paddingHorizontal="23dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="100dp"
+        android:weightSum="3">
 
-<TextView
-    android:id="@+id/mainFragLogoutBtn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|center"
-    android:background="@color/bright_cyan_two"
-    android:text="Log out"
-    android:paddingHorizontal="30dp"
-    android:paddingVertical="20dp"
-    style="@style/Bold23White"
-    android:layout_margin="23dp"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mainFragMedicineBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="10dp"
+            card_view:cardElevation="10dp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/mainFragMedicineBadge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_red_badge"/>
+
+                <TextView
+                    style="@style/Bold13Black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/ic_medical"
+                    android:text="תרופות"
+                    android:layout_gravity="center"/>
+
+            </FrameLayout>
+
+
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mainFragQuestionnaireBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="10dp"
+            card_view:cardElevation="10dp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/mainFragQuestionnaireBadge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_red_badge"/>
+
+                <TextView
+                    style="@style/Bold13Black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/ic_questionnaire"
+                    android:text="שאלון"
+                    android:layout_gravity="center"/>
+
+            </FrameLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mainFragReportBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="10dp"
+            card_view:cardElevation="10dp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/Bold13Black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="5dp"
+                    android:drawableTop="@drawable/ic_report"
+                    android:text=" דיווח חדש"
+                    android:layout_gravity="center"/>
+
+            </FrameLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
