--- a/app/src/main/res/layout/item_question_multi_choice.xml
+++ b/app/src/main/res/layout/item_question_multi_choice.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:elevation="5dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp">
 
     <LinearLayout
         android:id="@+id/itemQueMultiChoiceLayout"
@@ -27,11 +36,13 @@
 
     </LinearLayout>
 
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
         android:layout_gravity="bottom"
-        android:background="@color/almost_black"/>
+        android:background="@color/light_green"/>
 
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
