--- a/app/src/main/res/layout/item_question_open.xml
+++ b/app/src/main/res/layout/item_question_open.xml
@@ -2,25 +2,45 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="23dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <View
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/faded_green"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="2dp"
-        android:background="@color/white"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:elevation="5dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp">
 
-    <EditText
-        android:id="@+id/itemQueOpenAnswer"
-        style="@style/SemiBold20Black"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="15dp"
-        android:hint="Enter your answer"
-        android:background="@null"/>
+        <LinearLayout
+            android:id="@+id/itemQueMultiChoiceLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="23dp">
+
+            <EditText
+                android:id="@+id/itemQueOpenAnswer"
+                style="@style/SemiBold20Black"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="15dp"
+                android:gravity="top"
+                android:hint="הכנס את תשובתך..."
+                android:background="@null"
+                android:minLines="8"/>
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="bottom"
+            android:background="@color/light_green"/>
+
+    </androidx.cardview.widget.CardView>
+
+
 
 </FrameLayout>
