--- a/app/src/main/res/layout/fragment_medicine_category_list.xml
+++ b/app/src/main/res/layout/fragment_medicine_category_list.xml
@@ -20,7 +20,7 @@
             android:background="@color/colorPrimary">
 
             <ImageButton
-                android:id="@+id/medicineFragExitBtn"
+                android:id="@+id/medicineCategoryFragExitBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_close_round"
@@ -38,7 +38,7 @@
                 android:paddingHorizontal="23dp"
                 android:paddingVertical="17dp"
                 android:paddingEnd="50dp"
-                android:text="התרופות שלי"
+                android:text="בחר קטגוריה"
                 android:textSize="30sp" />
 
         </FrameLayout>
@@ -47,43 +47,11 @@
 
 
   <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/medicineFragRecycler"
+      android:id="@+id/medicineCategoryFragRecycler"
       android:layout_width="match_parent"
       android:paddingHorizontal="23dp"
       android:layout_height="0dp"
       android:layout_weight="1"/>
-
-
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/medicineFragAddBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginBottom="30dp"
-            android:layout_gravity="center"
-            android:elevation="8dp"
-            app:cardCornerRadius="50dp"
-            app:cardElevation="8dp">
-
-            <TextView
-                style="@style/Bold21White"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:background="@drawable/btn_rectangle_blue"
-                android:gravity="center"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="20dp"
-                android:text="הוסף תרופה חדשה" />
-
-        </androidx.cardview.widget.CardView>
-
-
-
-
-
 
 
 </LinearLayout>
