--- a/app/src/main/res/layout/item_medicine_category.xml
+++ b/app/src/main/res/layout/item_medicine_category.xml
@@ -16,15 +16,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:orientation="horizontal"
             android:padding="23dp">
 
             <TextView
-                android:id="@+id/itemMedicineName"
+                android:id="@+id/itemMedicineCategoryName"
                 style="@style/SemiBold20Black"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:paddingVertical="10dp"
                 android:paddingStart="15dp"
-                android:text="This is a Medicine" />
+                android:text="זוהי קטגוריה" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_right_black"/>
 
         </LinearLayout>
 
