--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -32,7 +32,11 @@
             app:popExitAnim="@anim/slide_left_exit"/>
         <action
             android:id="@+id/action_mainFragment_to_NotificationFragment"
-            app:destination="@id/NotificationFragment" />
+            app:destination="@id/NotificationFragment"
+            app:enterAnim="@anim/slide_right_enter"
+            app:exitAnim="@anim/slide_right_exit"
+            app:popEnterAnim="@anim/slide_left_enter"
+            app:popExitAnim="@anim/slide_left_exit"/>
 
     </fragment>
 
@@ -82,7 +86,7 @@
         android:label="MedicineListFragment"
         tools:layout="@layout/fragment_medicine_list"/>
 
-    <fragment
+    <dialog
         android:id="@+id/NotificationFragment"
         android:name="com.example.parkinson.features.notification.NotificationFragment"
         android:label="NotificationFragment"
