--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -24,8 +24,8 @@
         </action>
 
         <action
-            android:id="@+id/action_mainFragment_to_medicineFragment"
-            app:destination="@id/medicineFragment"
+            android:id="@+id/action_mainFragment_to_myMedicinesFragment"
+            app:destination="@id/myMedicinesFragment"
             app:enterAnim="@anim/slide_right_enter"
             app:exitAnim="@anim/slide_right_exit"
             app:popEnterAnim="@anim/slide_left_enter"
@@ -53,10 +53,10 @@
     </fragment>
 
     <fragment
-        android:id="@+id/medicineFragment"
-        android:name="com.example.parkinson.features.medicine.MedicineFragment"
-        android:label="MedicineFragment"
-        tools:layout="@layout/fragment_medicine">
+        android:id="@+id/myMedicinesFragment"
+        android:name="com.example.parkinson.features.medicine.MyMedicinesFragment"
+        android:label="MyMedicinesFragment"
+        tools:layout="@layout/fragment_my_medicines">
         <action
             android:id="@+id/action_medicineFragment_to_MedicineCategoryFragment"
             app:destination="@id/MedicineCategoryFragment"
