--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_blue"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="2">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -24,37 +25,80 @@
             android:gravity="center"
             android:paddingHorizontal="23dp"
             android:paddingVertical="17dp"
-            android:text="שלום ניקול!"
-            android:textSize="30sp"
             android:shadowColor="@color/gray_black"
             android:shadowDx="1"
             android:shadowDy="1"
-            android:shadowRadius="2" />
+            android:shadowRadius="2"
+            android:text="ברוך הבא!"
+            android:textSize="30sp" />
 
 
     </androidx.cardview.widget.CardView>
 
+    <TextView
+        style="@style/Bold21White"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="23dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shape_light_green_top_corners"
+        android:gravity="center"
+        android:paddingVertical="5dp"
+        android:shadowColor="@color/gray_black"
+        android:text="הודעות חדשות" />
 
-    <View
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMessages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_marginHorizontal="23dp"
+        android:layout_marginBottom="40dp"
+        android:layout_weight="1"
+        android:background="@drawable/shape_light_green_stroke_borrom_cornners"
+        android:orientation="vertical"
+        android:paddingHorizontal="23dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+    <TextView
+        style="@style/Bold21White"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="23dp"
+        android:background="@drawable/shape_light_green_top_corners"
+        android:gravity="center"
+        android:paddingVertical="5dp"
+        android:shadowColor="@color/gray_black"
+        android:text="דיווחים אחרונים" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerReports"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="23dp"
+        android:layout_marginBottom="40dp"
+        android:layout_weight="1"
+        app:reverseLayout="true"
+        android:background="@drawable/shape_light_green_stroke_borrom_cornners"
+        android:orientation="vertical"
+        android:paddingHorizontal="23dp"
+        app:stackFromEnd="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:paddingHorizontal="23dp"
+        android:layout_marginBottom="50dp"
         android:orientation="horizontal"
-        android:layout_marginBottom="100dp"
+        android:paddingHorizontal="23dp"
         android:weightSum="3">
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/mainFragMedicineBtn"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:layout_weight="1"
             android:elevation="8dp"
             app:cardCornerRadius="10dp"
             card_view:cardElevation="10dp">
@@ -65,23 +109,22 @@
 
                 <ImageView
                     android:id="@+id/mainFragMedicineBadge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:layout_margin="7dp"
-                    android:visibility="gone"
-                    android:src="@drawable/ic_red_badge"/>
+                    android:src="@drawable/ic_red_badge"
+                    android:visibility="gone" />
 
                 <TextView
                     style="@style/Bold13Black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="5dp"
+                    android:layout_gravity="center"
                     android:drawableTop="@drawable/ic_medical"
-                    android:text="תרופות"
-                    android:layout_gravity="center"/>
+                    android:drawablePadding="5dp"
+                    android:text="תרופות" />
 
             </FrameLayout>
-
 
 
         </androidx.cardview.widget.CardView>
@@ -89,9 +132,9 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/mainFragQuestionnaireBtn"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:layout_weight="1"
             android:elevation="8dp"
             app:cardCornerRadius="10dp"
             card_view:cardElevation="10dp">
@@ -102,20 +145,20 @@
 
                 <ImageView
                     android:id="@+id/mainFragQuestionnaireBadge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:layout_margin="7dp"
-                    android:visibility="gone"
-                    android:src="@drawable/ic_red_badge"/>
+                    android:src="@drawable/ic_red_badge"
+                    android:visibility="gone" />
 
                 <TextView
                     style="@style/Bold13Black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="5dp"
+                    android:layout_gravity="center"
                     android:drawableTop="@drawable/ic_questionnaire"
-                    android:text="שאלון"
-                    android:layout_gravity="center"/>
+                    android:drawablePadding="5dp"
+                    android:text="שאלון" />
 
             </FrameLayout>
 
@@ -125,9 +168,9 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/mainFragReportBtn"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:layout_weight="1"
             android:elevation="8dp"
             app:cardCornerRadius="10dp"
             card_view:cardElevation="10dp">
@@ -140,10 +183,10 @@
                     style="@style/Bold13Black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="5dp"
+                    android:layout_gravity="center"
                     android:drawableTop="@drawable/ic_report"
-                    android:text=" דיווח חדש"
-                    android:layout_gravity="center"/>
+                    android:drawablePadding="5dp"
+                    android:text=" דיווח חדש" />
 
             </FrameLayout>
 
