--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="1000dp"
+    android:layout_width="500dp"
     android:id="@+id/notification_background"
-    android:background="@color/transparent"
-    android:orientation="vertical"
+    android:background="#B3707171"
     android:layout_gravity="center"
     android:layoutDirection="ltr"
     xmlns:android="http://schemas.android.com/apk/res/android">
