--- a/app/src/main/res/values-iw-rIL/styles.xml
+++ b/app/src/main/res/values-iw-rIL/styles.xml
@@ -20,6 +20,17 @@
         <item name="android:statusBarColor" tools:targetApi="23">@color/transparent</item>
     </style>
 
+    <style name="Theme.Transparent" parent="AppTheme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
+
     <!--       Spartan Regular       -->
 
     <style name="Reg9Black">
