--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,6 @@
         <item name="colorPrimary">@color/bright_cyan_two</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/bright_cyan</item>
-
     </style>
 
     <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Dialog">
@@ -20,6 +19,18 @@
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:statusBarColor" tools:targetApi="23">@color/transparent</item>
     </style>
+
+
+    <style name="Theme.Transparent" parent="AppTheme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
 
     <!--       Spartan Regular       -->
 
